# raspberry-waveshare-sx126X-controller

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  sx1268.py  test.py
.github/workflows/: pypi-build-deploy.yaml
examples/: listener.py  p2p_receive.py  p2p_send.py  watch_and_send.py
src/waveshareSX126/: sx1268.py
src/wssx126/: sx1268.py
