[metadata]
name = waveshareSX126
version = file: VERSION
author = Mateusz Grefka
author_email = grefkamateusz@gmail.com
description = Simple controller for waveshare raspberry hats based on sx126 radio transceivers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vermibus/raspberry-waveshare-sx126X-controller
project_urls =
    Bug Tracker = https://github.com/Vermibus/raspberry-waveshare-sx126X-controller/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src